[gd_scene load_steps=4 format=3 uid="uid://c2gvojaxsy5k"]

[ext_resource type="Script" path="res://code/HUD.gd" id="1_433a5"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ets43"]
blend_mode = 1

[sub_resource type="Theme" id="Theme_6jin1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_433a5")

[node name="Control" type="Control" parent="."]
material = SubResource("CanvasItemMaterial_ets43")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_6jin1")

[node name="Message" type="Label" parent="Control"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -26.0
offset_right = 126.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "All sheeps are save for the night! 

"
horizontal_alignment = 1

[node name="MessageTimer" type="Timer" parent="Control"]
unique_name_in_owner = true

[node name="TimerLabel" type="Label" parent="Control"]
unique_name_in_owner = true
z_index = 2
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 26.0
grow_horizontal = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="Control"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
text = "Start"

[node name="LevelTimer" type="Timer" parent="Control"]
unique_name_in_owner = true
wait_time = 5.0

[node name="Hude_Node" type="Node3D" parent="."]

[node name="Panel" type="ColorRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.309804, 0.309804, 1)

[connection signal="pressed" from="Control/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="Control/LevelTimer" to="." method="_on_level_timer_timeout"]
